# psga-pipeline-sars-cov-2

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  COPYRIGHT  Dockerfile  Dockerfile.auspice  Dockerfile.ncov  Dockerfile.ncov2019-artic-nf  Dockerfile.ncov2019-artic-nf-illumina  Dockerfile.ncov2019-artic-nf-nanopore  Dockerfile.nextflow  Dockerfile.nextstrain  Dockerfile.pangolin  FAKE_FILE  Makefile  README.md  pyproject.toml
.circleci/: config.yml
ansible/: README.md  Vagrantfile  pipeline_install.yml
app/: SarsCov2.nf  fastq.nf  main.nf  main_new.nf  ncov-common.config  ncov-illumina.config  ncov-nanopore.config  ncov2019_artic.nf  nextflow.config  nextflow.local.config
bahrain_covid/: database.py  models.py
covid-pipeline/: autoresumer.py  executor.config  fastq_match.nf  main.nf  modules.nf  ncov-custom.config  ncov-illumina-k8s.config  ncov-illumina.config  ncov-nanopore-k8s.config  nextflow.config
db/: models.py
docker/: Dockerfile-release  Dockerfile.bactopia  Dockerfile.bactopia-pipeline-worker  Dockerfile.covid-pipeline  Dockerfile.fastqc  Dockerfile.htstools  Dockerfile.ncov2019-artic-nf-illumina  Dockerfile.ncov2019-artic-nf-illumina-base  Dockerfile.ncov2019-artic-nf-illumina-legacy  Dockerfile.ncov2019-artic-nf-nanopore  Dockerfile.ncov2019-artic-nf-nanopore-base  Dockerfile.ncov2019-artic-nf-nanopore-legacy  Dockerfile.nextflow  Dockerfile.pangolin  Dockerfile.pangolin-base  Dockerfile.pangolin-legacy  Dockerfile.postgres  Dockerfile.primer-autodetection  Dockerfile.psga  Dockerfile.psga-base  Dockerfile.psga-pipeline  Dockerfile.psga-pipeline-base  Dockerfile.psga-pipeline-legacy  Dockerfile.psga-pipeline-sars-cov-2  Dockerfile.psga-third-party-tools  Dockerfile.read-it-and-keep  Dockerfile.s-aureus  Dockerfile.s-aureus-pipeline  Dockerfile.sars-cov-2-pipeline  README  clone_ncov2019-artic-nf.sh  clone_pangolin.sh  download_primer_schemes.sh  get_sars_cov_2_primers.sh  ncov2019-artic-nf_nanopore_environment.yml  pangolin_environment.yml  psga.deps  sars_cov_2.deps
integration_tests/: compare.py  config.py  conftest.py  loading.py  sars_cov_2.py  synthetic.py  test_validation.py  validation.py
jenkins/: Jenkinsfile  cleanup.py  compare.py  config.py  conftest.py  (+5 more)
(+771 files in other folders)
