[tool.poetry]
name = "scripts"
version = "1.0.0"
description = ""
authors = ["Congenica <dev@congenica.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"
click = "~7.1"
psycopg2 = "~2.8"
biopython = "^1.78"
sqlalchemy = "~1.3"
sqlacodegen = "^2.3.0"
pre-commit = "2.8.1"
pytest = "^6.1.2"
natsort = "^7.1.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "~6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
