[tool.poetry]
name = "scripts"
version = "1.0.0"
description = ""
authors = ["Congenica <dev@congenica.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE V3"

[tool.poetry.dependencies]
awscli = "1.22.50"
click = "^8.1.7"
biopython = "1.79"
natsort = "7.1.1"
pre-commit = "2.17.0"
pytest = "7.1.3"
pytest-socket = "0.3.5"
python = "^3.10"
psutil = "5.9.0"
pandas = "1.5.0"
marshmallow = "3.18.0"
structlog = "21.5.0"
GitPython = "3.1.29"
pyahocorasick = "1.4.4"
allure-pytest = "^2.13.2"
PyYAML = "5.3.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[tool.pytest.ini_options]
markers = [
    "jira: A marker that allows a test to be associated with a story/task in Jira (for traceability purposes).",
]

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
